<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/white"
    android:layoutDirection="rtl"
    tools:context="com.mikaco.foodbama.fragment.AboutFragment">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:orientation="vertical">

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="114dp"
            android:src="@drawable/fbmicon" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/irsans"
            android:text="@string/app_name"
            android:textAlignment="center"
            android:textColor="@android:color/black"
            android:textSize="36sp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/irsans"
            android:text="@string/AppType"
            android:textAlignment="center"
            android:textColor="@android:color/darker_gray"
            android:textSize="14sp" />

        <TextView
            android:id="@+id/txtVersion"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:fontFamily="@font/irsans"
            android:text="@string/AppType"
            android:textAlignment="center"
            android:textColor="@android:color/darker_gray"
            android:textSize="14sp"
            tools:text="@string/Version" />

        <Button
            android:id="@+id/btnSupportEmail"
            style="@style/Widget.AppCompat.Button.Colored"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/irsans"
            android:text="@string/SupportEmail" />

        <Button
            android:id="@+id/btnSupportPhone"
            style="@style/Widget.AppCompat.Button.Colored"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/irsans"
            android:text="@string/SupportPhone" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:fontFamily="@font/irsans"
            android:padding="15dp"
            android:text="@string/Copyright"
            android:textAlignment="center"
            android:textColor="@android:color/black"
            android:textSize="12sp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/btnTermAndConditions"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:fontFamily="@font/irsans"
                android:text="@string/TermAndConditions"
                android:textAlignment="center"
                android:textColor="@android:color/darker_gray" />

            <TextView
                android:id="@+id/btnFeedback"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:fontFamily="@font/irsans"
                android:text="@string/Feedback"
                android:textAlignment="center"
                android:textColor="@android:color/darker_gray" />
        </LinearLayout>
    </LinearLayout>

</FrameLayout>
