<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/white"
    tools:context="com.mikaco.foodbama.fragment.ProfileFragment">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <de.hdodenhof.circleimageview.CircleImageView
            android:layout_width="match_parent"
            android:layout_height="81dp"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:layout_marginTop="20dp"
            android:src="@drawable/fbmicon"
            app:civ_border_width="2dp"
            app:civ_border_color="#FF000000"/>

        <TextView
            android:id="@+id/lblName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:fontFamily="@font/irsans"
            android:text="@string/LastName"
            android:textAlignment="center"
            android:textColor="@android:color/black"
            android:textSize="30sp" />

        <TextView
            android:id="@+id/lblPhone"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:layout_marginRight="10dp"
            android:layout_marginStart="10dp"
            android:fontFamily="@font/irsans"
            android:text="@string/Phone"
            android:textAlignment="center"
            android:textColor="@android:color/darker_gray"
            android:textSize="18sp" />

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginBottom="5dp"
            android:background="@android:color/darker_gray" />
        <Button
            android:id="@+id/btnPendingOrders"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:fontFamily="@font/irsans"
            android:padding="15dp"
            android:text="@string/PendingOrders"
            android:textAlignment="center"
            android:textSize="18sp" />

        <Button
            android:id="@+id/btnOrdersHistory"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:fontFamily="@font/irsans"
            android:padding="15dp"
            android:text="@string/OrdersHistory"
            android:textAlignment="center"
            android:textSize="18sp" />

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginBottom="5dp"
            android:layout_marginTop="5dp"
            android:background="@android:color/darker_gray" />
        <Button
            android:id="@+id/btnAddressesHistory"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:fontFamily="@font/irsans"
            android:padding="15dp"
            android:text="@string/AddressesHistory"
            android:textAlignment="center"
            android:textSize="18sp" />

        <Button
        android:id="@+id/btnChangePassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:fontFamily="@font/irsans"
        android:padding="15dp"
        android:text="@string/ChangePassword"
        android:textAlignment="center"
        android:textSize="18sp" />
        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginBottom="5dp"
            android:layout_marginTop="5dp"
            android:background="@android:color/darker_gray" />

        <Button
            android:id="@+id/btnLogout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:fontFamily="@font/irsans"
            android:padding="15dp"
            android:text="@string/Logout"
            android:textAlignment="center"
            android:textSize="18sp" />

    </LinearLayout>
</FrameLayout>
