<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layoutDirection="rtl"
    android:background="@android:color/white"
    tools:context="com.mikaco.foodbama.fragment.SearchFragment">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:orientation="vertical">

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="5dp"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:layout_marginTop="5dp"
            android:ems="10"
            android:fontFamily="@font/irsans"
            android:hint="@string/District"
            android:inputType="text"
            android:selectAllOnFocus="true"
            android:singleLine="true"
            android:textColor="@android:color/black" />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="5dp"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:layout_marginTop="5dp"
            android:ems="10"
            android:fontFamily="@font/irsans"
            android:hint="@string/Restaurant"
            android:inputType="text"
            android:selectAllOnFocus="true"
            android:singleLine="true"
            android:textColor="@android:color/black" />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="5dp"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:layout_marginTop="5dp"
            android:ems="10"
            android:fontFamily="@font/irsans"
            android:hint="@string/Food"
            android:inputType="text"
            android:selectAllOnFocus="true"
            android:singleLine="true"
            android:textColor="@android:color/black" />

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="5dp"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:layout_marginTop="5dp"
            android:text="@string/Search" />

    </LinearLayout>

</FrameLayout>
