<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/FoodBaMaPrimary">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constraintLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0">

        <ImageView
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:adjustViewBounds="false"
            android:scaleType="centerCrop"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.0"
            app:srcCompat="@drawable/back" />

        <ImageView
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:alpha="0.7"
            android:scaleType="fitXY"

            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="1.0"
            app:srcCompat="@android:color/black" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="24dp"
        android:layout_marginStart="24dp"
        android:layout_marginTop="8dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/constraintLayout"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="116dp"
                android:orientation="vertical">

                <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="102dp"
                    android:layout_marginBottom="30dp"
                    app:srcCompat="@drawable/fbmicon"
                    tools:layout_editor_absoluteX="152dp"
                    tools:layout_editor_absoluteY="60dp" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="299dp"
                android:layout_height="wrap_content"
                android:layout_marginBottom="15dp"
                android:background="@drawable/shape"
                android:orientation="vertical"
                android:padding="10dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <com.vicmikhailau.maskededittext.MaskedEditText
                    android:id="@+id/txtUsername"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="5dp"
                    android:drawableEnd="@drawable/username"
                    android:ems="10"
                    android:fontFamily="@font/irsans"
                    android:gravity="center_vertical|center_horizontal|center"
                    android:hint="@string/Username"
                    android:inputType="phone"
                    android:selectAllOnFocus="true"
                    android:singleLine="true"
                    android:textColor="@android:color/black"
                    android:textColorHint="@android:color/darker_gray"
                    app:mask="0### ### ####"
                    app:layout_constraintBottom_toTopOf="@+id/txtPassword"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.492"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <EditText
                    android:id="@+id/txtPassword"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="5dp"
                    android:drawableEnd="@drawable/password"
                    android:ems="10"
                    android:fontFamily="@font/irsans"
                    android:gravity="center_vertical|center_horizontal|center"
                    android:hint="@string/Password"
                    android:inputType="textPassword"
                    android:singleLine="true"
                    android:textColor="@android:color/black"
                    android:textColorHint="@android:color/darker_gray"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.492"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/txtUsername" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.498"
                app:layout_constraintStart_toStartOf="parent">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <Button
                        android:id="@+id/btnSignin"
                        style="@style/Widget.AppCompat.Button"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="5dp"
                        android:layout_marginTop="5dp"
                        android:layout_weight="1"
                        android:fontFamily="@font/irsans"
                        android:paddingBottom="15dp"
                        android:paddingTop="15dp"
                        android:text="@string/Login"
                        android:textAppearance="@style/TextAppearance.AppCompat"
                        tools:layout_editor_absoluteX="132dp"
                        tools:layout_editor_absoluteY="458dp" />

                    <Button
                        android:id="@+id/btnSignup"
                        style="@android:style/Widget.DeviceDefault.Button"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="5dp"
                        android:layout_marginTop="5dp"
                        android:layout_weight="1"
                        android:fontFamily="@font/irsans"
                        android:paddingBottom="15dp"
                        android:paddingTop="15dp"
                        android:text="@string/Register"
                        android:textAppearance="@style/TextAppearance.AppCompat"
                        tools:layout_editor_absoluteX="132dp"
                        tools:layout_editor_absoluteY="458dp" />

                </LinearLayout>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:fontFamily="@font/irsans"
                    android:paddingBottom="10dp"
                    android:paddingTop="10dp"
                    android:text="@string/ForgotPassword"
                    android:textAlignment="center"
                    android:textAppearance="@style/TextAppearance.AppCompat"
                    android:textColor="@android:color/background_light" />

            </LinearLayout>

        </LinearLayout>
    </androidx.constraintlayout.widget.ConstraintLayout>


</androidx.constraintlayout.widget.ConstraintLayout>